--- a/index.html
+++ b/index.html
@@ -1,1 +1,202 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RPG Camp</title>
+
+    <style>
+    .game-card-wide.mdl-card {
+      width: 100%;
+    }
+    .game-card-wide > .mdl-card__title {
+      color: #fff;
+      height: 176px;
+      background: url('cover copy.jpg') center / cover;
+    }
+    .game-card-wide > .mdl-card__menu {
+      color: #fff;
+    }
+    </style>
+  </head>
+  <body>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">IFMS RPG Camp</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <!-- Navigation. We hide it in small screens. -->
+          <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <a class="mdl-navigation__link" href="https://github.com/rsdevigo/IFMSDouradosRPGCamp">Github</a>
+            <a class="mdl-navigation__link" href="http://ifms.edu.br">IFMS</a>
+          </nav>
+        </div>
+      </header>
+      <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Menu</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="https://github.com/rsdevigo/IFMSDouradosRPGCamp">Github</a>
+          <a class="mdl-navigation__link" href="http://ifms.edu.br">IFMS</a>
+        </nav>
+      </div>
+      <main class="mdl-layout__content">
+        <div class="page-content">
+        </div>
+      </main>
+    </div>
+
+    <script type="text/javascript">
+
+      var jogos = [
+        {
+          nome: "A Viajante",
+          slug: "a_viajante",
+          autores: "Caleo, Caroline, Giovanna, Maria Eduarda e Thayse"
+        },
+        {
+          nome: "A Procura",
+          slug: "a_procura",
+          autores: "Karoline Ayme, Alexandre, Eduardo Pastor e Guilherme Araújo"
+        },
+        {
+          nome: "O Jogo",
+          slug: "o_jogo",
+          autores: "Pablo Henrique, Marco, Phelipe Sales e Isaias Avila"
+        },
+        {
+          nome: "O assassino trocado",
+          slug: "assassino_trocado",
+          autores: "Keven, Livia, LÌvian, Isabelly e Gabriela"
+        },
+        {
+          nome: "Crystal",
+          slug: "crystal",
+          autores: "Daniel Silva Longo, Sabrina Santos Alves e Felipe Sales de Lima"
+        },
+        {
+          nome: "The Rescue",
+          slug: "the_rescue",
+          autores: "Daniel Silva Longo, Sabrina Santos Alves e Felipe Sales de Lima"
+        },
+        {
+          nome: "PO",
+          slug: "po",
+          autores: "Ellen, Lorraine e Raquel"
+        },
+        {
+          nome: "Em busca da chave Porter",
+          slug: "chave_porter",
+          autores: "Rafael Costa, Rafael Nascimento e Alef"
+        },
+        {
+          nome: "Golden Forest",
+          slug: "golden_forest",
+          autores: "Victor, Gustavo, Gabrielly, Kauan e João"
+        },
+        {
+          nome: "Os perdidos",
+          slug: "os_perdidos",
+          autores: "Camilly, Julia, Karine, Mariane e Tiago Salvado"
+        },
+        {
+          nome: "Carlos",
+          slug: "carlos",
+          autores: "Carlos, José Thiago, Lucas Galan e Nilson"
+        },
+        {
+          nome: "Lenda de agnes",
+          slug: "lenda_agnes",
+          autores: "Clara Nugoli, Gabrielly Repele, José Pedro, Letícia Nolasco e Roney Felipe"
+        },
+        {
+          nome: "Closar",
+          slug: "closar",
+          autores: "Ana Laisla, Laura Aguiar, Anne Kelly, Gabrielly Merquides, Giovana Dantas e Camilly"
+        },
+        {
+          nome: "Caça Fantasmas",
+          slug: "caca_fantasmas",
+          autores: "Bruna, Jhonatan, Beatriz e Emily"
+        },
+        {
+          nome: "Projeto 2",
+          slug: "projeto2",
+          autores: "Débora e Paula"
+        },
+        {
+          nome: "Normal",
+          slug: "normal",
+          autores: "Dinapoli, Lucas Teles, Gabriel Braucks e Guilherme gibelli"
+        },
+        {
+          nome: "Four Elements",
+          slug: "four_elements",
+          autores: "Gustavo Vinicius, Gustavo Araujo, Gabriel Felipe, Luis henrique, Geovani rocha e Carlos eduardo"
+        },
+        {
+          nome: "The Ice Heart",
+          slug: "1hio",
+          autores: "Gabriel Nogueira,João paulo, Samuel e Victor Hugo"
+        },
+        {
+          nome: "Geme Ga",
+          slug: "geli",
+          autores: "GELIANDRA, ALYSSA, AN B., GEOVANA e LETICIA"
+        },
+        {
+          nome: "The Magic World",
+          slug: "morgado",
+          autores: "Rafael, Pedro, Gabriel Morgado, Murilo e Vinicius"
+        },
+        {
+          nome: "Os Santos Magos",
+          slug: "anne",
+          autores: "Matheus, Anne, Fabiana e Maria Eduarda"
+        },
+        {
+          nome: "The Lost Scientist",
+          slug: "pao",
+          autores: "Isadora, Sabrina, Luana e Laura, Leandro e Eric"
+        }
+      ]
+      var page = document.querySelector('.page-content');
+      var lineCount = 0;
+      var grid;
+      jogos.forEach(function(jogo){
+        var cell = document.createElement("div");
+        cell.className = "mdl-cell mdl-cell--4-col mdl-cell--4-col-phone";
+
+        var card = document.createElement("div");
+        card.className = "game-card-wide mdl-card mdl-shadow--2dp";
+        var cardTitle = document.createElement("div");
+        cardTitle.className = "mdl-card__title";
+        cardTitle.innerHTML = "<h2 class=\"mdl-card__title-text\">"+jogo.nome+"</h2>";
+        card.appendChild(cardTitle);
+        var cardSupportText = document.createElement("div");
+        cardSupportText.className = "mdl-card__supporting-text";
+        cardSupportText.innerHTML = jogo.autores;
+        card.appendChild(cardSupportText);
+        var cardAction = document.createElement("div");
+        cardAction.className = "mdl-card__actions mdl-card--border";
+        cardAction.innerHTML = '<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="jogos/'+jogo.slug+'/index.html">JOGAR</a>';
+        card.appendChild(cardAction);
+        cell.appendChild(card);
+        if (lineCount == 0) {
+          grid = document.createElement("div");
+          grid.className = "mdl-grid";
+          page.appendChild(grid);
+        }
+        grid.appendChild(cell);
+        lineCount = lineCount + 1;
+        if (lineCount == 3) {
+          lineCount = 0;
+        }
+      });
+    </script>
+  </body>
+</html>
